# FlappyBirby

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  bg.piskel  firstC.cbp  firstC.depend  firstC.layout  flappy birb.piskel  ground.piskel  icon.rc  main.c  pipe.piskel  util.h
FlappyBirby/: FlappyBirby
Source/: Main.c  Utility.c  Utility.h
assets/: birb2.piskel  flappy birb1.piskel
src/: anim.h  key.h  main.c  u_utility.c  u_utility.c~  u_utility.h  u_utility.h~  util.c
